List keys endpoint working
